# github-pr-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MASTER_LOG.md  README.md  plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/autocto/: __init__.py  config.py  github.py  issues.py  plan.py  repo.py  report.py
src/autocto/interfaces/: __init__.py  cli.py
tests/: test_cli.py  test_github.py  test_issues.py  test_plan.py  test_repo.py  test_report.py
